--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "third_party\\acutest"]
-	path = third_party\\acutest
+[submodule "third_party/acutest"]
+	path = third_party/acutest
 	url = https://github.com/mity/acutest
